HTML files update

--- a/design/design.html
+++ b/design/design.html
@@ -32,18 +32,20 @@
     </header>
 
     <h1>Design:</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque at dictum massa. Maecenas luctus mollis cursus. Nulla nec odio eu libero finibus tincidunt. Aliquam vitae sem eu leo imperdiet dictum vel quis leo. Praesent elit ipsum, scelerisque a iaculis sed, fermentum vitae nisi. Donec vel fermentum urna. Praesent gravida odio non ex aliquam accumsan. Nullam ac sodales nulla.</p>
-
+    <div class="DevDesign-notes">
+        <p>Welcome to the design page for my website.</p>
+        <p>This document provides a detailed overview of the design considerations, objectives, and specifications essential for understanding and executing this project effectively</p>
+    </div>
     <div class="card-container">
         <div class="card">
             <h2>Dev Design Notes</h2>
-            <img src="https://images.ctfassets.net/wp1lcwdav1p1/31dUrsGyucK0UNmJEQUqj3/3c57d917e84f6500ee2ec54e8760b854/UX_vs_UI.png?w=1500&q=60" alt="Image 1">
-            <a class="blog-link-text" href="../design/notes.html">Read</a>
+            <img src="https://as2.ftcdn.net/v2/jpg/02/72/87/71/1000_F_272877134_7wXfu4LNf8YUXF2ykzH00GWT6OrFPeoN.jpg" alt="Image 1" class="responsive">
+            <a class="blog-link-text" href="../design/notes.html">Read Dev design Notes</a>
         </div>
         <div class="card">
             <h2>Styleguide</h2>
-            <img src="https://divulgingdystopia.files.wordpress.com/2020/12/screenshot-184.png?w=1490" alt="image 2">
-            <a class="blog-link-text" href="../design/styleguide.html">Read</a>
+            <img src="https://fiverr-res.cloudinary.com/images/t_main1,q_auto,f_auto,q_auto,f_auto/gigs/243627169/original/65479aab0decc444d6f693518d0b5edbee711ad5/do-ui-ux-design-website-dashboard-mobile-app-ui-ux-design.jpeg" alt="image 2" class="responsive">
+            <a class="blog-link-text" href="../design/styleguide.html">Read Styleguide</a>
         </div>
         <!-- Add more cards as needed -->
     </div>
@@ -52,7 +54,7 @@
      <!-----------------------Footer------------------------------------------->
      <footer>
         <div class="footer">
-          <p>Contact:</p>
+          <p>Where to find me:</p>
             <a href="https://github.com/Fefeswork?tab=repositories"><i class="fa-brands fa-github"></i></a>
             <a href=""><i class="fa-regular fa-envelope"></i></a>
             <a href=""><i class="fa-brands fa-discord"></i></a>
