--- a/design/notes.html
+++ b/design/notes.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Fefe's portfolio website">
     <meta name="description" content ="Design">
     <meta name="author" content="Ofentse Magabeane">
-    <title>Design;Dev Design Notes</title>
+    <title>Design:Dev Design Notes</title>
 
      <!--CSS document linking-->
      <link rel="stylesheet" href="../CSS/normalize.css" />
