--- a/essays/essays.html
+++ b/essays/essays.html
@@ -18,6 +18,10 @@
         import { initialise } from "../JS/navigation.js";
         initialise("Essays");
     </script>
+
+    <!-- Linking Font awesome kit -->
+    <script src="https://kit.fontawesome.com/58493d5990.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <header>
@@ -47,7 +51,7 @@
      <!-----------------------Footer------------------------------------------->
      <footer>
         <div class="footer">
-          <p>Contact:</p>
+          <p>Where to find me:</p>
             <a href="https://github.com/Fefeswork?tab=repositories"><i class="fa-brands fa-github"></i></a>
             <a href=""><i class="fa-regular fa-envelope"></i></a>
             <a href=""><i class="fa-brands fa-discord"></i></a>
