--- a/portfolio/games.html
+++ b/portfolio/games.html
@@ -34,7 +34,11 @@
     <a href="../portfolio/portfolio.html"><i class="fa-solid fa-arrow-left"></i></a>
 
     <h1>Portfolio:Games</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque at dictum massa. Maecenas luctus mollis cursus. Nulla nec odio eu libero finibus tincidunt. Aliquam vitae sem eu leo imperdiet dictum vel quis leo. Praesent elit ipsum, scelerisque a iaculis sed, fermentum vitae nisi. Donec vel fermentum urna. Praesent gravida odio non ex aliquam accumsan. Nullam ac sodales nulla.</p>
+    <div class="DevDesign-notes">
+      <p>These are the game prototypes I’m proud to have worked on. </p>
+      <p>I have more work that I’m proud of in terms of the UI/UX and overall game design. I got to showcase my ideas and my skills as a programmer and designer.</p>
+      <p>I have more projects I’ve worked on for game jams and during my studies but these two rank top 2</p>
+    </div>
 
     <div class="content-container">
     <!---------------------Sushi Go Section------------------------>
@@ -65,5 +69,17 @@
     </div>
   </div>
  </div>
+
+ <!-----------------------Footer------------------------------------------->
+ <footer>
+  <div class="footer">
+    <p>Where to find me:</p>
+      <a href="https://github.com/Fefeswork?tab=repositories"><i class="fa-brands fa-github"></i></a>
+      <a href=""><i class="fa-regular fa-envelope"></i></a>
+      <a href=""><i class="fa-brands fa-discord"></i></a>
+      <a href="https://itch.io/profile/fefe-magabeane"><i class="fa-brands fa-itch-io"></i></a>
+  </div>
+</footer>
+
 </body>
 </html>
