--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -33,7 +33,9 @@
     </header>
 
     <h1>Portfolio:</h1>
-    <p>I’ve worked on a couple of projects during my studies- from game prototypes to interactive stories, written stories, app demons and concepts, and websites. From working with software such as Unity, Inky, Twine and various programming languages these are some of the projects I have produced and my proudest work.</p>
+    <div class="DevDesign-notes">
+        <p>I’ve worked on a couple of projects during my studies- from game prototypes to interactive stories, written stories, app demons and concepts, and websites. From working with software such as Unity, Inky, Twine and various programming languages these are some of the projects I have produced and my proudest work.</p>
+    </div>
 
     <div class="card-container">
         <div class="card">
