--- a/profile/profile.html
+++ b/profile/profile.html
@@ -1,52 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Fefe's portfolio website">
-    <meta name="description" content ="Profile">
-    <meta name="author" content="Ofentse Magabeane">
-    <title>Profile</title>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Fefe's portfolio website">
+        <meta name="description" content="Profile">
+        <meta name="author" content="Ofentse Magabeane">
+        <title>Profile</title>
 
-    <!--CSS document linking-->
-    <link rel="stylesheet" href="../CSS/normalize.css" />
-    <link rel="stylesheet" href="../CSS/styling.css" />
-    <link rel="stylesheet" href="../CSS/profile.css" />
+        <!--CSS document linking-->
+        <link rel="stylesheet" href="../CSS/normalize.css" />
+        <link rel="stylesheet" href="../CSS/styling.css" />
+        <link rel="stylesheet" href="../CSS/profile.css" />
 
-    <!--JS document linking-->
-    <script type="module">
-        import { initialise } from "../JS/navigation.js"
-        initialise("Profile");
+        <!--JS document linking-->
+        <script type="module">
+            import { initialise } from "../JS/navigation.js"
+            initialise("Profile");
         </script>
 
-             <!----------Linking Font awesome kit-------------------->
-      <script src="https://kit.fontawesome.com/58493d5990.js" crossorigin="anonymous"></script>
-</head>
-<body>
-    <header>
-        <nav>
-             <!--The code below is a container for all the hyperlink
-             that will be shown on my homepage-->
-        </nav>
-    </header>
+        <!----------Linking Font awesome kit-------------------->
+        <script src="https://kit.fontawesome.com/58493d5990.js" crossorigin="anonymous"></script>
+    </head>
+    <body>
+        <header>
+            <nav>
+                <!--The code below is a container for all the hyperlink that will be shown on my homepage-->
+            </nav>
+        </header>
 
         <h1>Profile</h1>
-        <img src="../profile/profile_images/cover.jpeg"alt= "Image of me" class="responsive" width="200" height="200">
+        <img src="../profile/profile_images/Me.JPG" alt="Image of me" class="responsive" width="200" height="200">
 
         <article>
             <div class="description">
-               <p>Heyyy there!! I’m Ofentse Magabeane but I like to go by Fefe</p>
-               <p> I am a game designer, and web developer- I eat, breathe, and sleep UI/UX. </p> 
-               <p>In short, I like making things look pretty but also functional. </p>
-               <p>Did I mention I’m a stellar athlete too?</p>
+                <p>Heyyy there!! I’m Ofentse Magabeane but I like to go by Fefe</p>
+                <p>I am a game designer, and web developer- I eat, breathe, and sleep UI/UX.</p> 
+                <p>In short, I like making things look pretty but also functional.</p>
+                <p>Did I mention I’m a stellar athlete too?</p>
             </div>
         </article>
         <br>
         
         <h3>Am I Qualified?</h3>
         <div class="qualification-text">
-          <p>Not yet but I am working towards that 😊. </p>
-          </p>Ofentse is completing her BA Digital Arts degree at the University of Witwatersrand and will be graduating in 2024.</p>
+            <p>Not yet but I am working towards that 😊.</p>
+            <p>Ofentse is completing her BA Digital Arts degree at the University of Witwatersrand and will be graduating in 2024.</p>
         </div> 
 
         <!--------------------------Random fact generator---------------------------->
@@ -56,20 +55,19 @@
         <button id="button">Well,I like</button> 
 
         <!-----------------------Footer------------------------------------------->
-  <footer>
-    <div class="footer">
-      <p>Where you can find me:</p>
-      <div class="footer-icons">
-        <a href="https://github.com/Fefeswork?tab=repositories"><i class="fa-brands fa-github"></i></a>
-        <a href=""><i class="fa-regular fa-envelope"></i></a>
-        <a href=""><i class="fa-brands fa-discord"></i></a>
-        <a href="https://itch.io/profile/fefe-magabeane"><i class="fa-brands fa-itch-io"></i></a>
-      </div>
-    </div>
-  </footer>
+        <footer>
+            <div class="footer">
+                <p>Where you can find me:</p>
+                <div class="footer-icons">
+                    <a href="https://github.com/Fefeswork?tab=repositories"><i class="fa-brands fa-github"></i></a>
+                    <a href=""><i class="fa-regular fa-envelope"></i></a>
+                    <a href=""><i class="fa-brands fa-discord"></i></a>
+                    <a href="https://itch.io/profile/fefe-magabeane"><i class="fa-brands fa-itch-io"></i></a>
+                </div>
+            </div>
+        </footer>
 
-    <!--The 'script' ref is to refeernce the fun dact generator-->
-    <script src="../JS/factgenerator.js"></script>
-
-</body>
+        <!--The 'script' ref is to reference the fun fact generator-->
+        <script src="../JS/factgenerator.js"></script>
+    </body>
 </html>
