--- a/portfolio/other.html
+++ b/portfolio/other.html
@@ -34,8 +34,10 @@
     <a href="../portfolio/portfolio.html"><i class="fa-solid fa-arrow-left"></i></a>
 
     <h1>Portfolio: Additional Work</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque at dictum massa. Maecenas luctus mollis cursus. Nulla nec odio eu libero finibus tincidunt. Aliquam vitae sem eu leo imperdiet dictum vel quis leo. Praesent elit ipsum, scelerisque a iaculis sed, fermentum vitae nisi. Donec vel fermentum urna. Praesent gravida odio non ex aliquam accumsan. Nullam ac sodales nulla.</p>
-
+    <div class="DevDesign-notes">
+      <p>These are more projects I've worked on. I've worked on interactive stories, written pieces (stories, scripts, story bibles) and Websites.</p>
+      <p>The projects below best describe and showcase my range as a UI-UX designer, I do not only focus on just games- I enjoy exploring UI/UX across all interactive media.</p>
+    </div>
 
 <div class="content-container">
     <!---------------------UNII App Section------------------------>
@@ -81,5 +83,16 @@
   </div>
 </div>
   
+<!-----------------------Footer------------------------------------------->
+<footer>
+  <div class="footer">
+    <p>Where to find me:</p>
+      <a href="https://github.com/Fefeswork?tab=repositories"><i class="fa-brands fa-github"></i></a>
+      <a href=""><i class="fa-regular fa-envelope"></i></a>
+      <a href=""><i class="fa-brands fa-discord"></i></a>
+      <a href="https://itch.io/profile/fefe-magabeane"><i class="fa-brands fa-itch-io"></i></a>
+  </div>
+</footer>
+
 </body>
 </html>
