--- a/design/styleguide.html
+++ b/design/styleguide.html
@@ -38,8 +38,9 @@
 
             <div class="DevDesign-notes">
                 <p>
-                    This is my styleguide, this is where the magic happens where I design various wireframes, explore colour palette ideas, and just an overview of changes I make and new ideas that arise during the production process
+                    This is my styleguide, this is where the magic happens where I design various wireframes, explore colour palette ideas, and just an overview of changes I make and new ideas that arise during the production process.
                 </p>
+                <p>Hover on the corner of the Journal page to explore!</p>
             </div>
 
             <div class="flipbook-viewport">
