--- a/essays/essays.html
+++ b/essays/essays.html
@@ -32,7 +32,9 @@
     </header>
 
     <h1>Essays:</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque at dictum massa. Maecenas luctus mollis cursus. Nulla nec odio eu libero finibus tincidunt. Aliquam vitae sem eu leo imperdiet dictum vel quis leo. Praesent elit ipsum, scelerisque a iaculis sed, fermentum vitae nisi. Donec vel fermentum urna. Praesent gravida odio non ex aliquam accumsan. Nullam ac sodales nulla.</p>
+    <div class="DevDesign-notes">
+        <p>These are essays I’ve written based on topics such as UI-UX and Digital colonialism. Independent research as well as class reading were used to assist in writing and engaging with these topics.</p>
+    </div>
 
     <div class="card-container">
         <div class="card">
