--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
   </header>
 
   <h1>Fefe's Portfolio Website</h1>
-  <img src="profile/profile_images/cover.jpeg" alt="Cover image" class="responsive" width="200" height="200">
+  <div class="home-img">
+    <img src="profile/profile_images/cover.jpeg" alt="Cover image" class="responsive" width="200" height="200">
+  </div>
   <div id="typewriter-text"></div>
 
   <!-----------------------Footer------------------------------------------->
