--- a/portfolio/other.html
+++ b/portfolio/other.html
@@ -11,6 +11,7 @@
      <!--CSS document linking-->
      <link rel="stylesheet" href="../CSS/normalize.css" />
      <link rel="stylesheet" href="../CSS/styling.css" />
+     <link rel="stylesheet" href="../CSS/portfolio.css" />
 
      <!--JS document linking-->
      <script type="module">
