--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <img src="profile/profile_images/cover.jpeg" alt="Cover image" class="responsive" width="400" height="600">
   </div>
 
-  <div class="typewriter-text">
-    <div id="typewriter-text"></div>
+  <div class="typewriter-container">
+    <div id="typedtext"></div>
   </div>
 
   <!-----------------------Footer------------------------------------------->
