--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
   <h1>Fefe's Portfolio Website</h1>
 
-  <div class="home-img">
-    <img src="profile/profile_images/cover.jpeg" alt="Cover image" class="responsive" width="400" height="600">
+  <div class="typewriter-container">
+    <p>Hi there! Welcome to my portfolio website. Why dont you do some exploring</p>
   </div>
 
-  <div class="typewriter-container">
-    <div id="typedtext"></div>
+  <div class="home-img">
+    <img src="profile/profile_images/cover.jpeg" alt="Cover image" class="responsive" width="400" height="600">
   </div>
 
   <!-----------------------Footer------------------------------------------->
