--- a/portfolio/other/bigsisAPI.html
+++ b/portfolio/other/bigsisAPI.html
@@ -34,6 +34,11 @@
     <a href="../other.html"><i class="fa-solid fa-arrow-left"></i></a>
 
     <h1>Big Sis Advice slip: API</h1>
+
+    <div class="DevDesign-notes">
+      <p>Hey! Need some advice I've got plenty of that for you with the click of a button :)</I></p>
+    </div>
+
     <div class="container">
 
         <div id="results"></div>
@@ -41,6 +46,7 @@
         <button class="btn" id="getData">Get Advice</button>
     
       </div>
+
 
        <!-----------------------Footer------------------------------------------->
     <footer>
