--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
 
   <h1>Fefe's Portfolio Website</h1>
 
-  <div class="home-img">
-    <img src="profile/profile_images/cover.jpeg" alt="Cover image" class="responsive" width="400" height="600">
+  <div class="home">
+    <div class="home-img">
+      <img src="profile/profile_images/cover.jpeg" alt="Cover image" class="responsive" width="400" height="600">
+    </div>
   </div>
 
   <!-----------------------Footer------------------------------------------->
