update portfolio HTML

--- a/portfolio/games.html
+++ b/portfolio/games.html
@@ -4,31 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Fefe's portfolio website">
-    <meta name="description" content ="Portfolio-games">
+    <meta name="description" content="Portfolio-games">
     <meta name="author" content="Ofentse Magabeane">
     <title>Portfolio:Games</title>
 
-     <!--CSS document linking-->
-     <link rel="stylesheet" href="../CSS/normalize.css" />
-     <link rel="stylesheet" href="../CSS/styling.css" />
-     <link rel="stylesheet" href="../CSS/portfolio.css" />
+    <!-- CSS document linking -->
+    <link rel="stylesheet" href="../CSS/normalize.css" />
+    <link rel="stylesheet" href="../CSS/styling.css" />
+    <link rel="stylesheet" href="../CSS/portfolio.css" />
 
-     <!--JS document linking-->
-     <script type="module">
-         import { initialise } from "../JS/navigation.js"
-         initialise("Portfolio");
-         </script>
-         <script src="../JS/blogsnav.js"></script>
+    <!-- JS document linking -->
+    <script type="module">
+        import { initialise } from "../JS/navigation.js"
+        initialise("Portfolio");
+    </script>
+    <script src="../JS/blogsnav.js"></script>
 
-         <!----------Linking Font awesome kit-------------------->
-       <script src="https://kit.fontawesome.com/58493d5990.js" crossorigin="anonymous"></script>
-
+    <!-- Linking Font awesome kit -->
+    <script src="https://kit.fontawesome.com/58493d5990.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <nav>
-             <!--The code below is a container for all the hyperlink
-             that will be shown on my homepage-->
+            <!-- The code below is a container for all the hyperlink
+            that will be shown on my homepage -->
         </nav>
     </header>
 
@@ -36,51 +35,50 @@
 
     <h1>Portfolio:Games</h1>
     <div class="DevDesign-notes">
-      <p>These are the game prototypes I’m proud to have worked on. </p>
-      <p>I have more work that I’m proud of in terms of the UI/UX and overall game design. I got to showcase my ideas and my skills as a programmer and designer.</p>
-      <p>I have more projects I’ve worked on for game jams and during my studies but these two rank top 2</p>
+        <p>These are the game prototypes I’m proud to have worked on.</p>
+        <p>I have more work that I’m proud of in terms of the UI/UX and overall game design. I got to showcase my ideas and my skills as a programmer and designer.</p>
+        <p>I have more projects I’ve worked on for game jams and during my studies but these two rank top 2.</p>
     </div>
 
     <div class="content-container">
-    <!---------------------Sushi Go Section------------------------>
-<div class="container">
-    <div class="row">
-      <div class="column-66">
-        <h1 class="xlarge-font"><b>Sushi Go!</b></h1>
-        <p> You should buy this app because lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <button onclick="navigateToPage('../portfolio/games/sushigo.html')">Read more</button>
-      </div>
-      <div class="column-33">
-          <img src="../portfolio/portfolio_images/SG1.png" width="800" height="800">
-      </div>
-    </div>
-  </div>
+        <!--------------------- Sushi Go Section ------------------------>
+        <div class="container">
+            <div class="row">
+                <div class="column-66">
+                    <h1 class="xlarge-font"><b>Sushi Go!</b></h1>
+                    <p>You should buy this app because lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <button onclick="navigateToPage('../portfolio/games/sushigo.html')">Read more</button>
+                </div>
+                <div class="column-33">
+                    <img src="../portfolio/portfolio_images/SG1.png" width="800" height="800">
+                </div>
+            </div>
+        </div>
   
-  <!-------------------- Resource Game Section---------------------------->
-  <div class="container">
-    <div class="row">
-      <div class="column-33">
-        <img src="../portfolio/portfolio_images/RM1.png" alt="App" width="800" height="800">
-      </div>
-      <div class="column-66">
-        <h1 class="xlarge-font"><b>Resource Management Game</b></h1>
-        <p>Sharp and clear photos with the world's best photo engine, incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        <button onclick="navigateToPage('../portfolio/games/resourcegame.html')">Read more</button>
-      </div>
+        <!-------------------- Resource Game Section ------------------------>
+        <div class="container">
+            <div class="row">
+                <div class="column-33">
+                    <img src="../portfolio/portfolio_images/RM1.png" alt="App" width="800" height="800">
+                </div>
+                <div class="column-66">
+                    <h1 class="xlarge-font"><b>Resource Management Game</b></h1>
+                    <p>Sharp and clear photos with the world's best photo engine, incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <button onclick="navigateToPage('../portfolio/games/resourcegame.html')">Read more</button>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
- </div>
 
- <!-----------------------Footer------------------------------------------->
- <footer>
-  <div class="footer">
-    <p>Where to find me:</p>
-      <a href="https://github.com/Fefeswork?tab=repositories"><i class="fa-brands fa-github"></i></a>
-      <a href=""><i class="fa-regular fa-envelope"></i></a>
-      <a href=""><i class="fa-brands fa-discord"></i></a>
-      <a href="https://itch.io/profile/fefe-magabeane"><i class="fa-brands fa-itch-io"></i></a>
-  </div>
-</footer>
-
+    <!----------------------- Footer -------------------------->
+    <footer>
+        <div class="footer">
+            <p>Where to find me:</p>
+            <a href="https://github.com/Fefeswork?tab=repositories"><i class="fa-brands fa-github"></i></a>
+            <a href=""><i class="fa-regular fa-envelope"></i></a>
+            <a href=""><i class="fa-brands fa-discord"></i></a>
+            <a href="https://itch.io/profile/fefe-magabeane"><i class="fa-brands fa-itch-io"></i></a>
+        </div>
+    </footer>
 </body>
 </html>
