--- a/essays/essay2.html
+++ b/essays/essay2.html
@@ -99,7 +99,7 @@
                 <p>Where you can find me:</p>
                 <div class="footer-icons">
                     <a href="https://github.com/Fefeswork?tab=repositories"><i class="fa-brands fa-github"></i></a>
-                    <a href=""><i class="fa-regular fa-envelope"></i></a>
+                    <a href="mailto:ofentse.magabeane@gmail.com"><i class="fa-regular fa-envelope"></i></a>
                     <a href=""><i class="fa-brands fa-discord"></i></a>
                     <a href="https://itch.io/profile/fefe-magabeane"><i class="fa-brands fa-itch-io"></i></a>
                 </div>
