--- a/design/design.html
+++ b/design/design.html
@@ -54,7 +54,7 @@
      <!-----------------------Footer------------------------------------------->
      <footer>
         <div class="footer">
-          <p>Where to find me:</p>
+          <p>Where you can find me:</p>
             <a href="https://github.com/Fefeswork?tab=repositories"><i class="fa-brands fa-github"></i></a>
             <a href="mailto:ofentse.magabeane@gmail.com"><i class="fa-regular fa-envelope"></i></a>
             <a href=""><i class="fa-brands fa-discord"></i></a>
