update( testing download as well)

--- a/portfolio/games/resourcegame.html
+++ b/portfolio/games/resourcegame.html
@@ -32,7 +32,7 @@
 
     <a href="../games.html"><i class="fa-solid fa-arrow-left"></i></a>
 
-    <h1>Resource Management Game</h1>
+    <h1> My Farm: Resource Management Game</h1>
     
         <div class="RM-div">
             <div class="portfolio-images">
@@ -40,7 +40,7 @@
                 <img src="../portfolio_images/RM2.png" alt="RM screenshot 2" class="responsive" width="600" height="500">
                 <img src="../portfolio_images/RM3.png" alt="RM screenshot 3" class="responsive" width="600" height="500">
             </div>
-    
+
             <div class="table">
                 <table>
                     <thead>
