--- a/portfolio/games/sushigo.html
+++ b/portfolio/games/sushigo.html
@@ -33,7 +33,7 @@
     
     <a href="../games.html"><i class="fa-solid fa-arrow-left"></i></a>
 
-    <h1>SushI Go</h1>
+    <h1>Sushi Go</h1>
 
     <div class="RM-div">
         <div class="portfolio-images">
