--- a/portfolio/other/UNIIApp.html
+++ b/portfolio/other/UNIIApp.html
@@ -83,6 +83,6 @@
       </footer>
 
       <!--------JS Linking------------------>
-         <script src="/JS/download.js"></script>
+         <script src="../../JS/download.js"></script>
 </body>
 </html>
