--- a/portfolio/other.html
+++ b/portfolio/other.html
@@ -50,7 +50,7 @@
         <button onclick="navigateToPage('../portfolio/other/UNIIApp.html')">Read more</button>
       </div>
       <div class="column-33">
-          <img src="https://img.freepik.com/free-vector/new-modern-realistic-front-view-black-iphone-mockup-isolated-white-mobile-template-vector_90220-957.jpg?size=338&ext=jpg&ga=GA1.1.1141335507.1717718400&semt=ais_user" width="335" height="471">
+          <img src="../portfolio/portfolio_images/UNII.png" width="335" height="471">
       </div>
     </div>
   </div>
