--- a/portfolio/other/UNIIApp.html
+++ b/portfolio/other/UNIIApp.html
@@ -37,9 +37,8 @@
 
     <div class="RM-div">
       <div class="portfolio-images">
-          <img src="../portfolio_images/SG1.png" alt="SG screenshot 1" class="responsive" width="600" height="500">
-          <img src="../portfolio_images/SG2.png" alt="SG screenshot 2" class="responsive" width="600" height="500">
-          <img src="../portfolio_images/SG3.png" alt="SG screenshot 3" class="responsive" width="600" height="500">
+          <img src="../portfolio_images/UNII1.png" alt="UNNI 1" class="responsive" width="600" height="500">
+          <img src="../portfolio_images/UNII2.png" alt="UNII 2" class="responsive" width="600" height="500">
       </div>
 
       <div class="table">
