update blogs html

--- a/essays/essays.html
+++ b/essays/essays.html
@@ -39,12 +39,12 @@
     <div class="card-container">
         <div class="card">
             <h2>Essay 1: UI/UX Analysis</h2>
-            <img src="https://images.ctfassets.net/wp1lcwdav1p1/31dUrsGyucK0UNmJEQUqj3/3c57d917e84f6500ee2ec54e8760b854/UX_vs_UI.png?w=1500&q=60" alt="Image 1">
+            <img src="https://images.ctfassets.net/wp1lcwdav1p1/31dUrsGyucK0UNmJEQUqj3/3c57d917e84f6500ee2ec54e8760b854/UX_vs_UI.png?w=1500&q=60" alt="Image 1" class="responsive">
             <a class="blog-link-text" href="../essays/essay1.html">Read</a>
         </div>
         <div class="card">
             <h2>Essay 2: Digital Colonialism</h2>
-            <img src="https://divulgingdystopia.files.wordpress.com/2020/12/screenshot-184.png?w=1490" alt="image 2">
+            <img src="https://divulgingdystopia.files.wordpress.com/2020/12/screenshot-184.png?w=1490" alt="image 2" class="responsive">
             <a class="blog-link-text" href="../essays/essay2.html">Read</a>
         </div>
         <!-- Add more cards as needed -->
