--- a/portfolio/other/UNIIApp.html
+++ b/portfolio/other/UNIIApp.html
@@ -39,6 +39,7 @@
       <div class="portfolio-images">
           <img src="../portfolio_images/UNII1.png" alt="UNNI 1" class="responsive" width="600" height="500">
           <img src="../portfolio_images/UNII2.png" alt="UNII 2" class="responsive" width="600" height="500">
+          <img src="../portfolio_images/UNII3.png" alt="UNII 3" class="responsive" width="600" height="500">
       </div>
 
       <div class="table">
