--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
   </header>
 
   <h1>Fefe's Portfolio Website</h1>
+<div class="DevDesign-notes">
+  <p>Welcome to my portfolio webisite!</p>
+</div>
 
   <div class="home">
     <div class="home-img">
