--- a/portfolio/games.html
+++ b/portfolio/games.html
@@ -46,7 +46,7 @@
             <div class="row">
                 <div class="column-66">
                     <h1 class="xlarge-font"><b>Sushi Go!</b></h1>
-                    <p>You should buy this app because lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>I think this one might make you hungry.Do you think you can be the ultimate sushi chef? Sushi Go! Is an idle clicker game prototype which I worked. The aim of the game is to make as much sushi as you can to be dubbed the ultimate sushi chef. </p>
                     <button onclick="navigateToPage('../portfolio/games/sushigo.html')">Read more</button>
                 </div>
                 <div class="column-33">
@@ -63,7 +63,7 @@
                 </div>
                 <div class="column-66">
                     <h1 class="xlarge-font"><b>Resource Management Game</b></h1>
-                    <p>Sharp and clear photos with the world's best photo engine, incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <p>This is a resource management game I designed in 2021. The aim of the game was to produce resources and obtain new resources to help grow your farm. The trading system was a bartering system. Players sold some of their resources to “buy” better ones. </p>
                     <button onclick="navigateToPage('../portfolio/games/resourcegame.html')">Read more</button>
                 </div>
             </div>
