--- a/portfolio/games/sushigo.html
+++ b/portfolio/games/sushigo.html
@@ -33,16 +33,22 @@
     
     <a href="../games.html"><i class="fa-solid fa-arrow-left"></i></a>
 
-    <h1>Sushi Go</h1>
-
+    <h1>SUSHI GO GAME:</h1>
+   
     <div class="RM-div">
         <div class="portfolio-images">
-            <img src="../portfolio_images/SG1.png" alt="SG screenshot 1" class="responsive" width="600" height="500">
-            <img src="../portfolio_images/SG2.png" alt="SG screenshot 2" class="responsive" width="600" height="500">
-            <img src="../portfolio_images/SG3.png" alt="SG screenshot 3" class="responsive" width="600" height="500">
+            <img src="../portfolio_images/SG1.png" alt="SG screenshot 1" class="responsive" width="400" height="300">
+            <img src="../portfolio_images/SG2.png" alt="SG screenshot 2" class="responsive" width="400" height="300">
+            <img src="../portfolio_images/SG3.png" alt="SG screenshot 3" class="responsive" width="400" height="300">
         </div>
 
         <div class="table">
+            <div class="game-notes">
+                <h4>I think this game might make you hungry?</h4>
+                <p>Sushi Go! Is an idle clicker game prototype which I worked. The aim of the game is to make as much sushi as you can to be dubbed the ultimate sushi chef. Players click on the chef to generate as much sushi as the can. With the generated sushi amount players can then use their score to purchase item that can double their score and make even more sushi. Do you have what it takes to be the ultimate sushi chef??</p>
+                <h5>Click the Button at the bottom to download the game!</h5>
+            </div>
+
             <table>
                 <thead>
                     <tr>
