--- a/portfolio/other.html
+++ b/portfolio/other.html
@@ -46,7 +46,7 @@
     <div class="row">
       <div class="column-66">
         <h1 class="xlarge-font"><b>UNII App</b></h1>
-        <p>A mobile app designed by students for students to help aid students with everyday mundane tasks. The app is intended to cater mainly to WITS students.</p>
+        <p>A mobile app designed by students for students to help aid students with everyday mundane tasks. The app is intended to cater mainly to WITS students. Our mission is simple We want to create a stronger sense of community amongst students. We believe that UNI can facilitate this by allowing students to experience all that varsity life has to offer.</p>
         <button onclick="navigateToPage('../portfolio/other/UNIIApp.html')">Read more</button>
       </div>
       <div class="column-33">
