--- a/portfolio/other/DAweb.html
+++ b/portfolio/other/DAweb.html
@@ -33,7 +33,7 @@
 
     <a href="../other.html"><i class="fa-solid fa-arrow-left"></i></a>
 
-    <h1>Internet Art Website</h1>
+    <h1>INTERNET ART WEBSITE</h1>
 
     <div class="RM-div">
         
@@ -45,6 +45,13 @@
 
 
       <div class="table">
+
+        <div class="game-notes">
+            <h4>Do you know what Internet Art is?</h4>
+            <p>Internet art, or net art, is a dynamic and innovative form of artistic expression that utilizes the internet as its primary medium. This genre transcends traditional boundaries, allowing artists to create interactive, multimedia experiences that can be accessed and shared globally.Here I created an internet art website where I chose the theme Adventure and played around with the idea to create an experience.<p></p>
+            <a href="https://fefeswork.github.io/IM4A-Internet-Art-A3/">Explore the wonders of Internet Art!</a>
+        </div>
+        
           <table>
               <thead>
                   <tr>
