--- a/portfolio/other/UNIIApp.html
+++ b/portfolio/other/UNIIApp.html
@@ -43,6 +43,13 @@
       </div>
 
       <div class="table">
+
+        <div class="game-notes">
+            <h4>Student love convience and this app does just that!</h4>
+            <p>A mobile app designed by students for students to help aid students with everyday mundane tasks. The app is intended to cater mainly to WITS students. Our mission is simple We want to create a stronger sense of community amongst students. We believe that UNI can facilitate this by allowing students to experience all that varsity life has to offer.. This project is a concept project that is accompanied by a working demo which my team and I plan to continue to work on in the future.</p>
+            <h5>Click the Button at the bottom to download the pitch deck!</h5>
+        </div>
+
           <table>
               <thead>
                   <tr>
