--- a/portfolio/other/bigsisAPI.html
+++ b/portfolio/other/bigsisAPI.html
@@ -33,7 +33,7 @@
 
     <a href="../other.html"><i class="fa-solid fa-arrow-left"></i></a>
 
-    <h1>Big Sis Advice slip: API</h1>
+    <h1>Big SIS ADVICE: API</h1>
 
     <div class="DevDesign-notes">
       <p>Hey! Need some advice I've got plenty of that for you with the click of a button :)</I></p>
