update- clumsy mistake

--- a/portfolio/games/resourcegame.html
+++ b/portfolio/games/resourcegame.html
@@ -12,11 +12,19 @@
     <link rel="stylesheet" href="../../CSS/normalize.css">
     <link rel="stylesheet" href="../../CSS/styling.css">
     
+    <!--JS document linking-->
+    <script type="module">
+        import { initialise } from "../../JS/navigation.js"
+        initialise("Portfolio");
+        </script>
+
 </head>
 <body>
+
     <header>
         <nav>
-            <!-- Navigation links -->
+             <!--The code below is a container for all the hyperlink
+             that will be shown on my homepage-->
         </nav>
     </header>
 
