--- a/portfolio/games/resourcegame.html
+++ b/portfolio/games/resourcegame.html
@@ -18,6 +18,9 @@
         initialise("Portfolio");
         </script>
 
+           <!----------Linking Font awesome kit-------------------->
+       <script src="https://kit.fontawesome.com/58493d5990.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
 
